# braids-vst

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/plans/: 2025-12-01-braids-vst-design.md  2025-12-01-phase1-implementation.md  2025-12-01-phase2-implementation.md  2025-12-01-presets-design.md  2025-12-01-tracker-ui-design.md
resources/: Icon.icns
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: lfo.cpp  lfo.h  mod_envelope.cpp  mod_envelope.h  modulation_matrix.cpp  modulation_matrix.h  moog_filter.cpp  moog_filter.h  resampler.cpp  resampler.h  voice.cpp  voice.h  voice_allocator.cpp  voice_allocator.h
src/dsp/braids/: analog_oscillator.cpp  analog_oscillator.h  envelope.cpp  envelope.h  fm_oscillator.cpp  fm_oscillator.h  macro_oscillator.cpp  macro_oscillator.h  resources.cpp  resources.h
src/dsp/stmlib/: dsp.h  random.h  stmlib.h
test/dsp/: AnalogOscillatorTests.cpp  EnvelopeTests.cpp  FmOscillatorTests.cpp  LfoTests.cpp  MacroOscillatorTests.cpp  ModEnvelopeTests.cpp  ModulationMatrixTests.cpp  MoogFilterTests.cpp  ResamplerTests.cpp  StmlibTests.cpp  VoiceAllocatorTests.cpp  VoiceTests.cpp
